# MarkdownAssistant

./: .gitignore  CMakeLists.txt  Manifest.md  README.md  TaskList.md  TechnicalDocument.md
.github/workflows/: ci.yml
cmake/: FindThirdParty.cmake
samples/: sample.md
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp  preview.cpp
src/gapbuffer/: CMakeLists.txt  gap_buffer.cpp  gap_buffer.h
src/markdown/: CMakeLists.txt  IMarkdownParser.h  cmark_adapter.cpp  cmark_adapter.h  fallback_renderer.cpp  fallback_renderer.h  html_utils.h  parser_factory.cpp
src/mdapp/: CMakeLists.txt  DocumentController.cpp  DocumentController.h  main.cpp
src/mdapp/qml/: Main.qml
src/mdapp_stub/: CMakeLists.txt  main.cpp
src/mdcore_stub/: CMakeLists.txt  mdcore_stub.cpp
tests/: CMakeLists.txt  documentcontroller_tests.cpp  gapbuffer_tests.cpp  markdown_tests.cpp  test_stub.cpp
tools/: CMakeLists.txt
